[package]
name = "crabby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
clap="4.0.32"
actix = "0.13.0"
actix-web = "4.2.1"
les = "0.1.0-alpha.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.59"

